// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSwitch dark mode should disable theming if the required attribute is omitted 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(132, 233, 255)"
  trackColorForFalse="rgb(19, 29, 43)"
  trackColorForTrue="rgba(132, 233, 255, 0.5)"
  trackTintColor="rgba(132, 233, 255, 0.5)"
/>
`;

exports[`Android BpkSwitch dark mode should render correctly 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(68, 80, 95)"
  trackColorForFalse="rgb(19, 29, 43)"
  trackColorForTrue="rgba(132, 233, 255, 0.5)"
  trackTintColor="rgb(19, 29, 43)"
/>
`;

exports[`Android BpkSwitch dark mode should support the "value" prop 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(132, 233, 255)"
  trackColorForFalse="rgb(19, 29, 43)"
  trackColorForTrue="rgba(132, 233, 255, 0.5)"
  trackTintColor="rgba(132, 233, 255, 0.5)"
/>
`;

exports[`Android BpkSwitch dark mode should support theming 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="red"
  trackColorForFalse="rgb(19, 29, 43)"
  trackColorForTrue="rgba(255, 0, 0, 0.5)"
  trackTintColor="rgba(255, 0, 0, 0.5)"
/>
`;

exports[`Android BpkSwitch light mode should disable theming if the required attribute is omitted 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(0, 98, 227)"
  trackColorForFalse="rgb(224, 227, 229)"
  trackColorForTrue="rgba(0, 98, 227, 0.32)"
  trackTintColor="rgba(0, 98, 227, 0.32)"
/>
`;

exports[`Android BpkSwitch light mode should render correctly 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(239, 241, 242)"
  trackColorForFalse="rgb(224, 227, 229)"
  trackColorForTrue="rgba(0, 98, 227, 0.32)"
  trackTintColor="rgb(224, 227, 229)"
/>
`;

exports[`Android BpkSwitch light mode should support the "value" prop 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="rgb(0, 98, 227)"
  trackColorForFalse="rgb(224, 227, 229)"
  trackColorForTrue="rgba(0, 98, 227, 0.32)"
  trackTintColor="rgba(0, 98, 227, 0.32)"
/>
`;

exports[`Android BpkSwitch light mode should support theming 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  thumbTintColor="red"
  trackColorForFalse="rgb(224, 227, 229)"
  trackColorForTrue="rgba(255, 0, 0, 0.32)"
  trackTintColor="rgba(255, 0, 0, 0.32)"
/>
`;
